--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 	
 	<img id="mince" src="obrazky/mince.png" alt="Mince">
+	<img id="minceBronz" src="obrazky/mince-bronzova.png" alt="Mince">
+	<img id="minceStrib" src="obrazky/mince-stribrna.png" alt="Mince">
 
 	<div id="score">0</div>
 
